# newlib

./: config.sub  libtool.m4
newlib/: aclocal.m4  configure  configure.host
newlib/doc/: Makefile.in  aclocal.m4  configure
newlib/iconvdata/: Makefile.in  configure
newlib/libc/: Makefile.in  configure
newlib/libc/argz/: Makefile.in
newlib/libc/ctype/: Makefile.in  jp2uc.c
newlib/libc/errno/: Makefile.in
newlib/libc/iconv/: Makefile.in
newlib/libc/iconv/ccs/: Makefile.in
newlib/libc/iconv/ccs/binary/: Makefile.in
newlib/libc/iconv/ces/: Makefile.in
newlib/libc/iconv/lib/: Makefile.in
newlib/libc/include/: glob.h
newlib/libc/locale/: Makefile.in
newlib/libc/machine/: Makefile.in  configure
newlib/libc/machine/a29k/: Makefile.in
newlib/libc/machine/aarch64/: Makefile.in
newlib/libc/machine/arc/: Makefile.in
newlib/libc/machine/arm/: Makefile.in  configure
newlib/libc/machine/bfin/: Makefile.in
newlib/libc/machine/cris/: Makefile.in  configure
newlib/libc/machine/crx/: Makefile.in
newlib/libc/machine/ft32/: Makefile.in
newlib/libc/machine/h8300/: Makefile.in  configure
newlib/libc/machine/h8500/: Makefile.in  configure
newlib/libc/machine/hppa/: Makefile.in  configure
newlib/libc/machine/i386/: Makefile.in  configure
newlib/libc/machine/i960/: Makefile.in  configure
newlib/libc/machine/lm32/: Makefile.in
newlib/libc/machine/m68k/: Makefile.in
newlib/libc/machine/mep/: Makefile.in
newlib/libc/machine/microblaze/: Makefile.in  configure
newlib/libc/machine/mips/: Makefile.in
newlib/libc/machine/mn10200/: Makefile.in
newlib/libc/machine/mn10300/: Makefile.in
newlib/libc/machine/msp430/: Makefile.in
newlib/libc/machine/nds32/: Makefile.in  configure
newlib/libc/machine/necv70/: Makefile.in  configure
newlib/libc/machine/nios2/: Makefile.in  configure
newlib/libc/machine/nvptx/: Makefile.in
newlib/libc/machine/powerpc/: Makefile.in  configure
newlib/libc/machine/riscv/: Makefile.in  configure
newlib/libc/machine/rx/: Makefile.in
newlib/libc/machine/sh/: Makefile.in  configure
newlib/libc/machine/sparc/: Makefile.in  configure
newlib/libc/machine/spu/: Makefile.in  configure
newlib/libc/machine/tic6x/: configure
newlib/libc/machine/visium/: Makefile.in
newlib/libc/machine/w65/: Makefile.in
newlib/libc/machine/x86_64/: Makefile.am  Makefile.in  configure  configure.in
newlib/libc/machine/xc16x/: Makefile.in
newlib/libc/machine/xstormy16/: Makefile.in
newlib/libc/machine/z8k/: Makefile.in  configure
newlib/libc/misc/: Makefile.in
newlib/libc/posix/: Makefile.in  glob.c
newlib/libc/reent/: Makefile.in
newlib/libc/search/: Makefile.in
newlib/libc/signal/: Makefile.in
newlib/libc/ssp/: Makefile.in
newlib/libc/stdio/: Makefile.in
newlib/libc/stdio64/: Makefile.in
newlib/libc/stdlib/: Makefile.in
newlib/libc/string/: Makefile.in
newlib/libc/sys/: Makefile.in  aclocal.m4  configure  configure.in
newlib/libc/sys/a29khif/: configure
newlib/libc/sys/arm/: configure
newlib/libc/sys/d10v/: configure
newlib/libc/sys/decstation/: configure
newlib/libc/sys/epiphany/: configure
newlib/libc/sys/h8500hms/: configure
newlib/libc/sys/linux/: Makefile.in  aclocal.m4  configure
newlib/libc/sys/linux/argp/: Makefile.in
newlib/libc/sys/linux/cmath/: Makefile.in
newlib/libc/sys/linux/dl/: Makefile.in
newlib/libc/sys/linux/iconv/: Makefile.in
newlib/libc/sys/linux/intl/: Makefile.in
newlib/libc/sys/m88kbug/: configure
newlib/libc/sys/mmixware/: configure
newlib/libc/sys/netware/: configure
newlib/libc/sys/ooos/: Makefile.am  Makefile.in  aclocal.m4  configure  configure.in  dirent.c  posix_stub.c  pthread_syscalls.c  pwd.c  syscalls.c  syscalls.h
newlib/libc/sys/ooos/include/: dlfcn.h  pthread.h
newlib/libc/sys/ooos/include/netinet/: ip.h
newlib/libc/sys/ooos/machine/: Makefile.am  Makefile.in  aclocal.m4  configure  configure.in
newlib/libc/sys/ooos/machine/x86_64/: Makefile.am  Makefile.in  aclocal.m4  configure  configure.in  crt0.S  crti.S  crtn.S  dl_stub.c  thread_landing.S  tls_stub.c
newlib/libc/sys/ooos/sys/: _pthreadtypes.h  _types.h  dirent.h  mman.h  pthread.h  stat.h
newlib/libc/sys/or1k/: configure
newlib/libc/sys/phoenix/: configure
newlib/libc/sys/rdos/: configure
newlib/libc/sys/rtems/: configure
newlib/libc/sys/sparc64/: configure
newlib/libc/sys/sun4/: configure
newlib/libc/sys/switch/: Makefile.in  aclocal.m4  configure
newlib/libc/sys/sysnec810/: configure
newlib/libc/sys/sysnecv850/: configure
newlib/libc/sys/sysvi386/: configure
newlib/libc/sys/sysvnecv70/: configure
newlib/libc/sys/tirtos/: configure
newlib/libc/sys/w65/: configure
newlib/libc/sys/z8ksim/: configure
newlib/libc/syscalls/: Makefile.in
newlib/libc/time/: Makefile.in
newlib/libc/unix/: Makefile.in
newlib/libc/xdr/: Makefile.in
newlib/libm/: Makefile.in  aclocal.m4  configure
newlib/libm/common/: Makefile.in
newlib/libm/complex/: Makefile.in  cargl.c  catanl.c  ccoshl.c  ccosl.c  cephes_subrl.c  cexpl.c  clogl.c  cpowl.c  cprojl.c  csinhl.c  csinl.c  csqrtl.c  ctanhl.c  ctanl.c
newlib/libm/machine/: Makefile.in  configure
newlib/libm/machine/aarch64/: Makefile.in
newlib/libm/machine/arm/: Makefile.in
newlib/libm/machine/i386/: Makefile.in  configure
newlib/libm/machine/nds32/: Makefile.in  configure
newlib/libm/machine/riscv/: Makefile.in  configure
newlib/libm/machine/spu/: Makefile.in
newlib/libm/math/: Makefile.in
newlib/libm/mathfp/: Makefile.in
(+17 files in other folders)
